--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Calculador Notas Alumnos</title>
-</head>
-<body>
-    <h2>Calcular Nota Promedio</h2>
-    <p>Agregar nota: <input type="text" id="nota"></p>
-    <input type="button" value="Agregar">
-    <input type="button" value="Calular">
-    <p>Promedio: </p>
-    <script src="js/main.js"></script>
-</body>
+    <script defer src="js/main.js"></script>
+    <style>
+
+    </style>
+  </head>
+  <body class="body">
+    <form>
+      <h1>Promedios</h1>
+      <div class="formcontainer">
+      <hr/>
+      <div class="container">
+        <p>Agregar Numero: <input type="number" placeholder="Numero" id="nota" required></p>
+        <input type="text" placeholder="No Calculado" class="promedio" disabled = disabled >
+      </div>
+      <button type="button" onclick="AgregarNota()">Agregar</button>
+      <button type="button" onclick="PromediarNotas()">Calcular</button>
+      <button type="button" onclick="BorrarArray()">Borrar Notas</button>
+    </form>
+  </body>
 </html>
