--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <hr/>
       <div class="container">
         <p>Agregar Numero: <input type="number" placeholder="Numero" id="nota" required></p>
-        <input type="text" placeholder="No Calculado" class="promedio" disabled = disabled >
+        <input type="text" placeholder="No Calculado" id="promedio" disabled = disabled >
+        <input type="text" placeholder="No tiene numeros agregados" id="Notas" disabled = disabled >
       </div>
       <button type="button" onclick="AgregarNota()">Agregar</button>
       <button type="button" onclick="PromediarNotas()">Calcular</button>
